force-app/main/default/objects/copado__Selenium_Test_Group__c/fields/copado__Environment__c.field-meta.xml
<CustomField>
    <fullName>copado__Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Environment</label>
    <referenceTo>copado__Environment__c</referenceTo>
    <relationshipLabel>Selenium Test Groups</relationshipLabel>
    <relationshipName>Selenium_Test_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>