force-app/main/default/objects/copado__Selenium_Test_Group__c/fields/copado__Manage_Test_Runs_manually__c.field-meta.xml
<CustomField>
    <fullName>copado__Manage_Test_Runs_manually__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When this option is unchecked, Copado will automatically create/update/remove Test Runs for each Suite/ Credential.

Check it to manage the Test Runs in this group manually, then go to a Test Run list view, and use the &quot;Add to Test Group&quot; option.</inlineHelpText>
    <label>Manage Test Runs manually</label>
    <type>Checkbox</type>
</CustomField>