force-app/main/default/objects/copado__Selenium_Test_Group__c/fields/copado__Selenium_Settings__c.field-meta.xml
<CustomField>
    <fullName>copado__Selenium_Settings__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>All tests runs belonging to this Test Group will use these Selenium Settings.</inlineHelpText>
    <label>Selenium Settings</label>
    <referenceTo>copado__Selenium_Settings__c</referenceTo>
    <relationshipLabel>Selenium Test Groups</relationshipLabel>
    <relationshipName>Selenium_Test_Groups</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>