force-app/main/default/objects/copado__Selenium_Test_Group__c/fields/copado__Status_Date__c.field-meta.xml
<CustomField>
    <fullName>copado__Status_Date__c</fullName>
    <label>Status Date</label>
    <type>DateTime</type>
</CustomField>